# OpenRe

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MILESTONES.md  Makefile  PROJECTS.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  docs-quality.yml  eval-regression.yml  release.yml
configs/agents/: research_basic.yaml  research_browser.yaml  research_multimodal.yaml
configs/ci/: regression_gate.yaml
configs/models/: local_baseline.yaml  openai_gpt5.yaml  openai_o3.yaml
configs/policies/: high_risk.yaml  low_risk.yaml  medium_risk.yaml
configs/search/: dev_test_loop.yaml  weighted_objective.yaml
configs/tools/: browser.yaml  computer_use.yaml  file_search.yaml  web_search.yaml
datasets/research_assistant_v1/: dataset_card.md  expected_outputs.jsonl  grading_rubric.yaml  tasks.jsonl
docs/: 01_vision_and_scope.md  02_prd.md  03_system_context.md  04_container_architecture.md  05_component_design.md  06_domain_model.md  07_oo_design.md  08_design_patterns.md  09_api_and_cli_spec.md  10_dataset_and_eval_spec.md  11_tracing_observability.md  12_optimizer_design.md  13_safety_and_approval_model.md  14_security_threat_model.md  15_testing_strategy.md  16_ci_cd_release.md  18_high_level_design.md  19_low_level_design.md  20_architecture_and_project_structure.md  21_database_strategy_and_distributed_data_design.md  22_api_design_and_security.md  23_scalability_performance_cost_and_event_driven_architecture.md  24_testing_quality_metrics_and_scm.md  25_maintenance_reliability_consistency_availability.md  26_design_principles_and_uml.md  27_ai_ml_dl_nlp_neuroscience_data_science.md  28_enterprise_reference_map.md  29_seo_and_discoverability.md  30_discoverability_execution_plan.md  31_community_growth_and_contributor_activation.md  32_openre_default_framework_spec.md  README.md
docs/17_adrs/: ADR-001-python-monorepo.md  ADR-002-hexagonal-architecture.md  ADR-003-config-driven-agents.md  ADR-004-human-approval-gate.md  ADR-005-opik-integration.md  ADR-006-benchmark-first-development.md
docs/diagrams/: approval-flow.drawio
examples/: approval_flow_demo.py  browser_task_demo.py  compare_two_agents.py  optimize_prompt.py  optimize_tool_schema.py  run_single_agent.py
project/issues/: README.md
scripts/: check_markdown_links.py  generate_report.py  lint_all.sh  run_benchmark.py  run_regression_gate.py  seed_dataset.py
src/agent_workbench/: __init__.py
tests/evals/: test_exact_match.py  test_harness.py  test_rubric_grade.py  test_trace_grade.py
tests/integration/: test_cli_integration.py  test_dataset_seed.py  test_openai_responses_adapter.py  test_report_export_integration.py  test_storage_adapters_integration.py  test_trace_grading_integration.py  test_trace_sink_integration.py
tests/regression/: test_regression_gate.py  (+1 more)
(+135 files in other folders)
