[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-agent-workbench"
version = "0.1.0"
description = "OpenRe: the default framework for testing AI agents with benchmarks, traces, evals, and safety gates."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Open Agent Workbench Maintainers" }]
license = { text = "Apache-2.0" }
keywords = [
  "ai-agents",
  "llm-evaluation",
  "agent-benchmarking",
  "ai-safety",
  "observability",
  "multimodal-ai",
  "prompt-optimization",
  "tool-use",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: System :: Monitoring",
]
dependencies = [
  "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "types-PyYAML>=6.0.12.20250516",
  "pre-commit>=3.7.0",
]

[project.scripts]
awb = "agent_workbench.app.cli:main"
openre = "agent_workbench.app.cli:main"

[project.urls]
Homepage = "https://github.com/reiidoda/OpenRe"
Repository = "https://github.com/reiidoda/OpenRe"
Issues = "https://github.com/reiidoda/OpenRe/issues"
Documentation = "https://github.com/reiidoda/OpenRe/tree/main/docs"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
